--- a/src/SCSS/_storypage.scss
+++ b/src/SCSS/_storypage.scss
@@ -28,7 +28,7 @@
 }
 
 .stories-header {
-  text-align: center;
+  text-align: left;
 }
 
 .stories-header:hover {
